force-app/main/default/objects/DocuSignSetting__c/DocuSignSetting__c.object-meta.xml
<CustomObject>
    <label>DocuSignSetting</label>
    <nameField>
        <displayFormat>DSN-{00000}</displayFormat>
        <label>DocuSignSetting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSignSetting</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>