force-app/main/default/objects/DocuSignSetting__c/fields/access_token__c.field-meta.xml
<CustomField>
    <fullName>access_token__c</fullName>
    <label>access token</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>