force-app/main/default/objects/DocuSignSetting__c/fields/code__c.field-meta.xml
<CustomField>
    <fullName>code__c</fullName>
    <label>code</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>