force-app/main/default/objects/DocuSignSetting__c/fields/refresh_token__c.field-meta.xml
<CustomField>
    <fullName>refresh_token__c</fullName>
    <label>refresh token</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>